report controller complete
